test/files/neg/t3209.check
t3209.scala:2: error: identifier expected but eof found.
package test
            ^
one error found
